--- a/index.html
+++ b/index.html
@@ -9,61 +9,68 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+
 </head>
 
-<body>
-    <div class="container-fluid">
-        <div class="container">
+<body class="bg-dark">
+    <div class="container-fluid text-light">
+        <div class="container bg-secondary" style="margin-top: 50px">
             <div class="row">
                 <div class="col-12">
-                    <h1 class="text-center">Crystals Collector</h1>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <h2 class="text-center">Instructions</h2>
-                    <p></p>
+                    <div class="jumbotron jumbotron-fluid bg-secondary">
+                        <div class="container">
+                            <h1 class="display-4 text-center">Crystals Collector</h1>
+                            <h2 class="text-center">Instructions</h2>
+                            <br>
+                            <p>sdvlkqsdhf;iqrjlfjqi;eljcmqeroigjqveulrgnuiqerhn
+                                goniuqhroiughqoieurhgpqouerhwempomhrwpoguhqeporugho
+                                puqerhgopuqheroghoqerhgoipqerjgopi
+                            </p>
+                            <p>sdvlkqsdhf;iqrjlfjqi;eljcmqeroigjqveulrgnuiqerhn
+                                goniuqhroiughqoieurhgpqouerhwempomhrwpoguhqeporugho
+                                puqerhgopuqheroghoqerhgoipqerjgopi
+                            </p>
+                            <p>sdvlkqsdhf;iqrjlfjqi;eljcmqeroigjqveulrgnuiqerhn
+                                goniuqhroiughqoieurhgpqouerhwempomhrwpoguhqeporugho
+                                puqerhgopuqheroghoqerhgoipqerjgopi
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-8">
-                    <h5>#<span id="solution-number"></span></h5>
+                    <div class="container text-dark bg-light">
+                        <h5>Number to Guess: <span id="solution-number"></span></h5>
+                    </div>
                 </div>
                 <div class="col-4">
-                    <div class="container">
-                        <h6>Wins: <span id="wins-count"></span></h6>
-                        <h6>Losses: <span id="losses-count"></span></h6>
+                    <div class="container text-dark bg-light">
+                        <h5>Wins: <span id="wins-count"></span></h5>
+                        <h5>Losses: <span id="losses-count"></span></h5>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-3">
-                    <img src="../unit-4-game/assets/images/Crystal sphere-256.png" class="img-fluid" alt="crystal">
+                    <img src="../unit-4-game/assets/images/Crystal sphere-256.png" class="img-fluid crystal-image"
+                        alt="crystal">
                 </div>
                 <div class="col-3">
-                    <img src="../unit-4-game/assets/images/Gem-256.png" class="img-fluid" alt="ruby">
+                    <img src="../unit-4-game/assets/images/Gem-256.png" class="img-fluid crystal-image" alt="ruby">
                 </div>
                 <div class="col-3">
-                    <img src="../unit-4-game/assets/images/Gemstone-256.png" class="img-fluid" alt=gemstone">
+                    <img src="../unit-4-game/assets/images/Gemstone-256.png" class="img-fluid crystal-image"
+                        alt=gemstone">
                 </div>
                 <div class="col-3">
-                    <img src="../unit-4-game/assets/images/Sapphire-256.png" class="img-fluid" alt="sapphire">
+                    <img src="../unit-4-game/assets/images/Sapphire-256.png" class="img-fluid crystal-image"
+                        alt="sapphire">
                 </div>
             </div>
             <div class="row">
                 <div class="col-8">
-                    <div class="container">
-                        <p>Your total score is: </p>
-                    </div>
-                </div>
-                <div class="col-4">
-                    <p></p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-8">
-                    <div class="container">
-                        <h5># <span id="your-score"></span></h5>
+                    <div class="container text-dark bg-light">
+                        <h5>Your total score is: <span id="your-score"></span></h5>
                     </div>
                 </div>
                 <div class="col-4">
@@ -72,9 +79,12 @@
             </div>
         </div>
     </div>
-    <script>
+
+    <script src="assets/javascript/game.js">
+
 
     </script>
+
 </body>
 
 </html>
