this is my third commit

--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
             </div>
             <div class="row">
                 <div class="col-3">
-                    <img src="../unit-4-game/assets/images/Crystal sphere-256.png" class="img-fluid crystal-image"
+                    <img src="../unit-4-game/assets/images/Crystal sphere-256.png" class="img-fluid" id="crystal1"
                         alt="crystal">
                 </div>
                 <div class="col-3">
-                    <img src="../unit-4-game/assets/images/Gem-256.png" class="img-fluid crystal-image" alt="ruby">
+                    <img src="../unit-4-game/assets/images/Gem-256.png" class="img-fluid" id="crystal2" alt="ruby">
                 </div>
                 <div class="col-3">
-                    <img src="../unit-4-game/assets/images/Gemstone-256.png" class="img-fluid crystal-image"
+                    <img src="../unit-4-game/assets/images/Gemstone-256.png" class="img-fluid" id="crystal3"
                         alt=gemstone">
                 </div>
                 <div class="col-3">
-                    <img src="../unit-4-game/assets/images/Sapphire-256.png" class="img-fluid crystal-image"
+                    <img src="../unit-4-game/assets/images/Sapphire-256.png" class="img-fluid" id="crystal4"
                         alt="sapphire">
                 </div>
             </div>
