this is my fourth commit

--- a/index.html
+++ b/index.html
@@ -22,17 +22,12 @@
                             <h1 class="display-4 text-center">Crystals Collector</h1>
                             <h2 class="text-center">Instructions</h2>
                             <br>
-                            <p>sdvlkqsdhf;iqrjlfjqi;eljcmqeroigjqveulrgnuiqerhn
-                                goniuqhroiughqoieurhgpqouerhwempomhrwpoguhqeporugho
-                                puqerhgopuqheroghoqerhgoipqerjgopi
+                            <p>Click the crystals to equal the Number to Guess. Each crystal
+                                has a random value assigned at the start of each game. 
                             </p>
-                            <p>sdvlkqsdhf;iqrjlfjqi;eljcmqeroigjqveulrgnuiqerhn
-                                goniuqhroiughqoieurhgpqouerhwempomhrwpoguhqeporugho
-                                puqerhgopuqheroghoqerhgoipqerjgopi
+                            <p>If you select the crystals to equal the Number to Guess, you win!
                             </p>
-                            <p>sdvlkqsdhf;iqrjlfjqi;eljcmqeroigjqveulrgnuiqerhn
-                                goniuqhroiughqoieurhgpqouerhwempomhrwpoguhqeporugho
-                                puqerhgopuqheroghoqerhgoipqerjgopi
+                            <p>If you select the crystals, and exceed the Number to Guess, you lose!!!!
                         </div>
                     </div>
                 </div>
@@ -40,7 +35,7 @@
             <div class="row">
                 <div class="col-8">
                     <div class="container text-dark bg-light">
-                        <h5>Number to Guess: <span id="solution-number"></span></h5>
+                        <h3>Number to Guess: <span id="solution-number"></span></h3>
                     </div>
                 </div>
                 <div class="col-4">
@@ -50,6 +45,7 @@
                     </div>
                 </div>
             </div>
+            <br>
             <div class="row">
                 <div class="col-3">
                     <img src="../unit-4-game/assets/images/Crystal sphere-256.png" class="img-fluid" id="crystal1"
@@ -67,10 +63,11 @@
                         alt="sapphire">
                 </div>
             </div>
+            <br>
             <div class="row">
                 <div class="col-8">
                     <div class="container text-dark bg-light">
-                        <h5>Your total score is: <span id="your-score"></span></h5>
+                        <h3>Your total score is: <span id="your-score"></span></h3>
                     </div>
                 </div>
                 <div class="col-4">
