--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                             <h2 class="text-center">Instructions</h2>
                             <br>
                             <p>Click the crystals to equal the Number to Guess. Each crystal
-                                has a random value assigned at the start of each game. 
+                                has a random value assigned at the start of each game.
                             </p>
                             <p>If you select the crystals to equal the Number to Guess, you win!
                             </p>
@@ -72,6 +72,16 @@
                 </div>
                 <div class="col-4">
                     <p></p>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <footer class="fixed-bottom bg-light">
+                        <p></p>
+                    </footer>
                 </div>
             </div>
         </div>
